test/asm/const-not.err
error: const-not.asm(3):
    Assertion failed
Assembly aborted with 1 error!
